@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 11-01-04: Cleaned up the structure of #blevel. [Trihan]
 - 10-31-04: REED: Updated autoconversion of sample Pre-REED data. [AlexKreuz]
 - 10-30-04: Added a missing semi-colin (compiler didn't see this error, odd).  [Tsusai]
 - 10-30-04: Commented out some jobchange; data that is messing up going to high classes. [Tsusai]
